--- a/package.json
+++ b/package.json
@@ -11,25 +11,33 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "^11.2.1",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/messaging": "^18.8.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
     "core-js": "^3.35.1",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.3",
     "react-native-device-info": "^10.12.0",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-qrcode-svg": "^6.3.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-share": "^10.0.2",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^14.1.0",
     "react-native-web": "^0.19.10",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
