--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.3",
     "react-native-device-info": "^10.12.0",
+    "react-native-get-random-values": "^1.10.0",
+    "react-native-permissions": "^4.1.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-safe-area-context": "4.8.2",
